--- a/hellobuffer/index.html
+++ b/hellobuffer/index.html
@@ -68,7 +68,7 @@
         <img src="/assets/gifs/excited-andy-d32292e9b9b4f07b9cbb726101b8092c.gif" />
       </p>
       <p>
-        After all, Buffer is one of my favorite social media tools, which <a href="http://raventools.com/blog/12-shortcut-tools-for-lazy-community-management/" title="I tell" target="_blank">I tell</a> to <a href="http://socialmediaclub.org/blogs/from-the-clubhouse/top-10-social-media-tools-engagement" title="pretty much anyone" target="_blank">pretty much anyone</a> <a href="http://www.slideshare.net/raventools/taming-the-social-media-fire-hose-10476814" title="who'll listen">who’ll listen</a>. 
+        After all, Buffer is one of my favorite social media tools, which <a href="http://raventools.com/blog/12-shortcut-tools-for-lazy-community-management/" title="I tell" target="_blank">I tell</a> to <a href="http://socialmediaclub.org/blogs/from-the-clubhouse/top-10-social-media-tools-engagement" title="pretty much anyone" target="_blank">pretty much anyone</a> <a href="http://www.slideshare.net/raventools/taming-the-social-media-fire-hose-10476814" title="who'll listen" target="_blank">who’ll listen</a>. 
       </p>
       <p>
         Then I read the job description and got even more excited&hellip;
