Update pull-quote cite

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <!-- Custom CSS -->
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-        <link rel="stylesheet" href="/assets/main-6b9b26fa596a034ae3c66751178ede55.css">
+        <link rel="stylesheet" href="/assets/main-12a24a1e47ec3c1539eb61bb66e3977e.css">
 
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png" />
         <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png" />
@@ -190,7 +190,7 @@
           <blockquote>
             <p>Courtney is the PREMIERE community manager. She is graced with effective communication skills, strong writing talent, and the grace to manage conversations without interposing.</p>
           </blockquote>
-          <small><a href="http://www.mothersdigital.com/" title="Laura Stevenson Obrohta, Mothers Digital" target="_blank">Laura Stevenson, Mothers Digital</a></small>
+          <small><a href="http://www.mothersdigital.com/" title="Laura Stevenson Obrohta, Mothers Digital" target="_blank">Laura Stevenson Obrohta, Mothers Digital</a></small>
         </div>
       </aside>
 
@@ -214,7 +214,7 @@
       <blockquote>
         <p>Courtney is the PREMIERE community manager. She is graced with effective communication skills, strong writing talent, and the grace to manage conversations without interposing.</p>
       </blockquote>
-      <small><a href="http://www.mothersdigital.com/" title="Laura Stevenson Obrohta, Mothers Digital" target="_blank">Laura Stevenson, Mothers Digital</a></small>
+      <small><a href="http://www.mothersdigital.com/" title="Laura Stevenson Obrohta, Mothers Digital" target="_blank">Laura Stevenson Obrohta, Mothers Digital</a></small>
     </div>
   </aside>
 
