--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Courtney Seiter</title>
+        <title>Courtney Seiter | Communicator. Connector. And a bit of a cheerleader.</title>
         <meta name="viewport" content="width=device-width">
 
         <!-- syntax highlighting CSS -->
@@ -35,6 +35,17 @@
     </head>
     <body>
 
+      <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-45667012-1', 'courtneyseiter.com');
+        ga('send', 'pageview');
+
+      </script>
+
         <div class="site">
 
           <header>
@@ -57,7 +68,7 @@
           <div class="content">
   <section class="content-block content-block__intro">
     <p class="lead">
-      Hey! I'm Courtney Seiter – a writer, <!-- <a href="http://www.webpagefx.com/blog/internet/10-lessons-from-editing-the-raven-tools-blog/" target="_blank" title="editor"> -->editor, Nashvillian, music nerd, cyclist, discerning GIF collector and former community journalist turned community manager. I'm happiest when I'm in the middle of smart conversations, whether over coffee or online. 
+      Hey! I'm Courtney Seiter – a writer, editor, Nashvillian, music nerd, cyclist, discerning GIF collector and former community journalist turned community manager. I'm happiest when I'm in the middle of smart conversations, whether over coffee or online. 
     </p>
   </section>
   <section class="content-block content-block__writing">
