--- a/hellobuffer/index.html
+++ b/hellobuffer/index.html
@@ -11,7 +11,7 @@
 
         <!-- Custom CSS -->
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-        <link rel="stylesheet" href="/assets/main-12a24a1e47ec3c1539eb61bb66e3977e.css">
+        <link rel="stylesheet" href="/assets/main-90bbd593ce8fd2b82a50a84658a892fb.css">
 
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png" />
         <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png" />
@@ -175,7 +175,7 @@
           <footer>
             <section class="contact">
               <h1>
-                Courtney Seiter
+                Questions? Tweet <a href="http://twitter.com/courtneyseiter" title="Courtney on Twitter" target="_blank">@courtneyseiter</a>
               </h1>
               <p>  
                 <a href="http://twitter.com/courtneyseiter" title="Courtney on Twitter" target="_blank"><i class="fa fa-twitter-square"></i></a><a href="http://plus.google.com/+CourtneySeiter/" title="Courtney on Google+" target="_blank"><i class="fa fa-google-plus-square"></i></a><a href="http://linkedin.com/in/courtneyseiter" title="Courtney on LinkedIn" target="_blank"><i class="fa fa-linkedin-square"></i></a><a href="http://www.facebook.com/courtneyseiter" title="Courtney on Facebook" target="_blank"><i class="fa fa-facebook-square"></i></a>
