--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
 
           <header>
             <section class="hero">
-              
               <div class="blurb">
                 <h1><a href="/" title="Home">Courtney Seiter</a></h1>
                 <h2 class="tagline">
@@ -59,7 +58,7 @@
                   <span>Connector.</span>
                   <span>And a bit of a cheerleader.</span>
                 </h2>
-              </div>  
+              </div>
               <div class="headshot">
                 <img src="/assets/headshot-1ecba70339f2f883358b289c26ab8551.jpg" />
               </div>
@@ -69,7 +68,7 @@
           <div class="content">
   <section class="content-block content-block__intro">
     <p class="lead">
-      Hey! I'm Courtney Seiter – a writer, editor, Nashvillian, music nerd, cyclist, discerning GIF collector and former community journalist turned community manager. I'm happiest when I'm in the middle of smart conversations, whether over coffee or online. 
+        Hey! I'm Courtney Seiter – a writer, editor, Nashvillian, music nerd, cyclist, discerning GIF collector and former community journalist turned <strong>content marketer</strong>. I'm happiest when I'm in the middle of smart conversations, whether over coffee or online.
     </p>
   </section>
   <section class="content-block content-block__writing">
@@ -88,28 +87,18 @@
 
     <h1><i class="fa fa-pencil"></i> Writing</h1>
     <p>
-      I write a lot about <a href="http://raventools.com/resources/whitepapers/social-media-metrics/" title="social media" target="_blank">social media</a>, content marketing and search engine optimization, but I really like focusing on topics like <a href="http://raventools.com/blog/social-media-in-a-tragedy-be-helpful-be-kind-or-be-quiet/" title="empathy" target="_blank">empathy</a> and how <a href="http://raventools.com/blog/social-media-and-the-art-of-being-interested/" title="technology can make us better people" target="_blank">technology can make us better people</a>. Here's where you can see some of my work:
+      I write a lot about <a href="http://blog.bufferapp.com/a-guide-to-social-media-sharing-what-when-and-how" title="social media" target="_blank">social media</a>, content marketing and <a href="http://blog.bufferapp.com/beginners-guide-to-seo" title="search engine optimization" target="_blank">search engine optimization</a>, but I really like focusing on topics like <a href="http://marketingland.com/our-challenge-for-2013-empathetic-social-media-29286" title="empathy" target="_blank">empathy</a> and how <a href="http://raventools.com/blog/social-media-and-the-art-of-being-interested/" title="technology can make us better people">technology can make us better people</a> people. Here's where you can see some of my work:
     </p>
     <ul class="nav">
-      <li><i class="fa fa-circle-o fa-fw"></i> On the <a href="http://raventools.com/blog/author/courtneyseiter/" titl="Raven Tools blog" target="_blank">Raven Tools blog</a></li>
-      <li><i class="fa fa-circle-o fa-fw"></i> My column at <a href="http://marketingland.com/author/courtney-seiter" title="Marketing Land" target="_blank">Marketing Land</a></li>
-      <li><i class="fa fa-circle-o fa-fw"></i> At <a href="http://socialmediaclub.org/profile/courtneyseiter" title="Social Media Club" target="_blank">Social Media Club</a></li>
+        <li><i class="fa fa-circle-o fa-fw"></i><a href="http://blog.bufferapp.com/author/courtney" target="_blank">The Buffer Blog</a></li>
+        <li><i class="fa fa-circle-o fa-fw"></i><a href="http://www.fastcompany.com/3027699/how-our-brains-decide-what-we-share-online" target="_blank">Fast Company</a></li>
+        <li><i class="fa fa-circle-o fa-fw"></i><a href="http://www.inc.com/jeff-haden/14-powerful-social-media-sharing-strategies-you-arent-using.html" target="_blank">Inc.</a></li>
+        <li><i class="fa fa-circle-o fa-fw"></i><a href="http://thenextweb.com/author/courtneyseiter/#!wQIZ1" target="_blank">The Next Web</a></li>
+        <li><i class="fa fa-circle-o fa-fw"></i><a href="http://www.businessinsider.com/communication-tips-from-best-interviewers-2014-1" target="_blank">Business Insider</a></li>
+        <li><i class="fa fa-circle-o fa-fw"></i><a href="http://socialmediatoday.com/posts/published/user/956671" target="_blank">Social Media Today</a></li>
     </ul>
 
   </section>
-
-
-  <aside class="inline-quote">
-    <div class="inline-quote__image">
-      <img src="/assets/falls-106f355fd9cc717aed42ddee5b4639b4.jpg" />
-    </div>
-    <div class="inline-quote__quote">
-      <blockquote>
-        <p>Courtney is a top-notch community manager and it-getter in the social space.</p>
-      </blockquote>
-      <small><a href="http://www.jasonfalls.com/" title="Jason Falls" target="_blank">Jason Falls</a></small>
-    </div>
-  </aside>
 
 
   <section class="content-block content-block__speaking">
@@ -128,37 +117,24 @@
 
     <h1><i class="fa fa-microphone"></i> Speaking</h1>
     <p>
-      I love sharing what I've learned with others, and I've been lucky enough to speak at events both local and national, including <a href="http://searchmarketingexpo.com/socialmediamarketing" title="SMX Social" target="_blank">SMX Social</a>, <a href="http://www.socialmediaexplorer.com/" title="Explore Social Media" target="_blank">Explore Social Media</a>, <a href="http://www.interactivitydigital.com/events/" title="Interactivity Digital" target="_blank">Interactivity Digital</a>, <a href="http://www.barcampnashville.org/bcn13/" title="Barcamp Nashville" target="_blank">Barcamp Nashville</a>, <a href="http://searchexchange.org/" title="Search Exchange" target="_blank">Search Exchange</a> and more. See some of my talks here:
+      I love sharing what I've learned with others, and I've been lucky enough to speak at events both local and national, including <a href="http://searchmarketingexpo.com/socialmediamarketing" title="SMX Social" target="_blank">SMX Social</a>, <a href="http://www.socialmediaexplorer.com/" title="Explore Social Media" target="_blank">Explore Social Media</a>, <a href="http://www.interactivitydigital.com/events/" title="Interactivity Digital" target="_blank">Interactivity Digital</a>, <a href="http://searchexchange.org/" title="Search Exchange" target="_blank">Search Exchange</a> and more. See some of my talks here:
     </p>
     <ul class="nav">
       <li><i class="fa fa-circle-o fa-fw"></i> <a href="http://www.slideshare.net/raventools/social-media-and-the-art-of-being-interested" title="Social Media And the Art of Being Interested" target="_blank">Social Media And the Art of Being Interested</a></li>
       <li><i class="fa fa-circle-o fa-fw"></i> <a href="http://youtu.be/QcEjHGSQ8aI" title="A Tweet is Worth What? A Guide to Measuring Social Media" target="_blank">A Tweet is Worth What? A Guide to Measuring Social Media</a></li>
-      <li><i class="fa fa-circle-o fa-fw"></i> <a href="http://www.slideshare.net/raventools/break-the-rules-of-social-media-12518662" title="Break the Rules of Social Media" target="_blank">Break the Rules of Social Media</a></li>
+      <li><i class="fa fa-circle-o fa-fw"></i> <a href="http://moz.com/webinars/the-science-of-writing-must-click-headlines-on-social-media" title="The Science of Writing Must-Click Headlines on Social Media" target="_blank">The Science of Writing Must-Click Headlines on Social Media</a></li>
     </ul>
 
   </section>
 
 
-  <aside class="inline-quote">
-    <div class="inline-quote__image">
-      <img src="/assets/wright-219bc6fbde916910d25f116c9ab19977.png" />
-    </div>
-    <div class="inline-quote__quote">
-      <blockquote>
-        <p>She has an appealing voice in her writing - it is authentic, smart, creative &hellip; Her articles on social media and search marketing are heavily shared, and she is considered a trusted source as successful digital marketer. She is fantastic person to work with</p>
-      </blockquote>
-      <small><a href="http://marketingland.com/author/monica-wright" title="Monica Wright, Marketing Land" target="_blank">Monica Wright, Marketing Land</a></small>
-    </div>
-  </aside>
-
 
   <section class="content-block content-block__tools">
-
-    <aside class="pull-quote">
+    <aside class="pull-quote pull-quote__left">
       <div class="pull-quote__image">
         <img src="/assets/fishkin-fc6106f5bd911def09a8ad8792fb45cb.jpg" />
       </div>
-      <div class="pull-quote__quote">
+      <div class="inline-quote__quote">
         <blockquote>
           <p>Man, she is amazing.</p>
         </blockquote>
@@ -168,41 +144,29 @@
 
     <h1><i class="fa fa-dashboard"></i> Tools</h1>
     <p>
-      I'm always on the lookout for tools that make happier and <a href="http://raventools.com/blog/12-shortcut-tools-for-lazy-community-management/" title="more productive">more productive</a>. Here are some my favorites.
+      I'm always on the lookout for tools that make happier and <a href="http://blog.bufferapp.com/29-free-marketing-tools" title="more productive">more productive</a>. Here are some my favorites.
     </p>
     <ul class="nav">
-      <li><i class="fa fa-circle-o fa-fw"></i> <a href="http://raventools.com/" title="Raven Tools" target="_blank"><strong>Raven Tools</strong></a>: I'm a little biased since I'm Raven's community manager, but this platform is a giant resource of SEO, social media, research and content tools.</li>
       <li><i class="fa fa-circle-o fa-fw"></i> <a href="https://bufferapp.com/" title="Buffer" target="_blank"><strong>Buffer</strong></a>: The easiest and most delightful way to curate and share great content on social media channels.</li>
       <li><i class="fa fa-circle-o fa-fw"></i> <a href="http://songza.com/" title="Songza" target="_blank"><strong>Songza</strong></a>: Good work needs a great soundtrack, and Songza has the perfect mix of songs for any whim, mood or activity – curated by savvy tastemakers.</li>
+      <li><i class="fa fa-circle-o fa-fw"></i> <a href="https://www.canva.com/" title="Songza" target="_blank"><strong>Canva</strong></a>: I am hopeless at design, but Canva makes me feel like a creative genius, whipping up visual and infographics with ease.</li>
     </ul>
-
   </section>
 
 
-  <aside class="inline-quote">
-    <div class="inline-quote__image">
-      <img src="/assets/fishkin-fc6106f5bd911def09a8ad8792fb45cb.jpg" />
-    </div>
-    <div class="inline-quote__quote">
-      <blockquote>
-        <p>Man, she is amazing.</p>
-      </blockquote>
-      <small><a href="http://moz.com/rand/" title="Rand Fishkin" target="_blank">Rand Fishkin</a></small>
-    </div>
-  </aside>
 
 
   <section class="content-block content-block__trivia">
 
       <aside class="pull-quote pull-quote__right">
         <div class="pull-quote__image">
-          <img src="/assets/obrohta-c00b83edf9dbeb2cce297f584a765efb.jpg" />
+          <img src="/assets/6a3f639cbbdd78bf333d09b73bcdca3c.png" />
         </div>
         <div class="pull-quote__quote">
           <blockquote>
-            <p>Courtney is the PREMIERE community manager. She is graced with effective communication skills, strong writing talent, and the grace to manage conversations without interposing.</p>
+            <p>Hers was easily some of the best social media content I could find – I was hooked!</p>
           </blockquote>
-          <small><a href="http://www.mothersdigital.com/" title="Laura Stevenson Obrohta, Mothers Digital" target="_blank">Laura Stevenson Obrohta, Mothers Digital</a></small>
+          <small><a href="http://bufferapp.com/" title="Leo Widrich, Buffer" target="_blank">Leo Widrich, Buffer</a></small>
         </div>
       </aside>
 
@@ -214,21 +178,10 @@
         <li><i class="fa fa-circle-o fa-fw"></i> I once worked in the editorial department <a href="http://www.interactivitydigital.com/q-community-manager-raven/" title="Playboy" target="_blank">at Playboy</a>.</li>
         <li><i class="fa fa-circle-o fa-fw"></i> I can count to 12 in Danish.</li>
         <li><i class="fa fa-circle-o fa-fw"></i> I will make a playlist for any occasion.</li>
+        <li><i class="fa fa-circle-o fa-fw"></i> My middle name is Alan. No one knows why.</li>
       </ul>
 
   </section>
-
-  <aside class="inline-quote">
-    <div class="inline-quote__image">
-      <img src="/assets/obrohta-c00b83edf9dbeb2cce297f584a765efb.jpg" />
-    </div>
-    <div class="inline-quote__quote">
-      <blockquote>
-        <p>Courtney is the PREMIERE community manager. She is graced with effective communication skills, strong writing talent, and the grace to manage conversations without interposing.</p>
-      </blockquote>
-      <small><a href="http://www.mothersdigital.com/" title="Laura Stevenson Obrohta, Mothers Digital" target="_blank">Laura Stevenson Obrohta, Mothers Digital</a></small>
-    </div>
-  </aside>
 
 </div>
 
@@ -238,7 +191,7 @@
               <h1>
                 Questions? Tweet <a href="http://twitter.com/courtneyseiter" title="Courtney on Twitter" target="_blank">@courtneyseiter</a>
               </h1>
-              <p>  
+              <p>
                 <a href="http://twitter.com/courtneyseiter" title="Courtney on Twitter" target="_blank"><i class="fa fa-twitter-square"></i></a><a href="http://plus.google.com/+CourtneySeiter/" title="Courtney on Google+" target="_blank"><i class="fa fa-google-plus-square"></i></a><a href="http://linkedin.com/in/courtneyseiter" title="Courtney on LinkedIn" target="_blank"><i class="fa fa-linkedin-square"></i></a><a href="http://www.facebook.com/courtneyseiter" title="Courtney on Facebook" target="_blank"><i class="fa fa-facebook-square"></i></a>
               </p>
             </section>
